hphp/hack/test/typecheck/new_inference/typehole/lambda_with_invoke.php.like_types.exp
File "lambda_with_invoke.php", line 21, characters 36-37:
Was expecting an object but type is unknown (Typing[4297])
File "lambda_with_invoke.php", line 21, characters 29-30:
It is unknown because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
File "lambda_with_invoke.php", line 17, characters 10-11:
Invalid argument (Typing[4110])
File "lambda_with_invoke.php", line 12, characters 27-27:
Expected T
File "lambda_with_invoke.php", line 14, characters 49-49:
  via this generic T
File "lambda_with_invoke.php", line 15, characters 25-25:
But got dynamic because it is an unenforceable type
